--- a/knitting/bind_off.html
+++ b/knitting/bind_off.html
@@ -12,11 +12,11 @@
     <h3>코 막음(bind-off)</h3>
     <p>영문 도안 표시: bo<br>
     동영상 강의 ▼</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/lyYW0q7U9Pw?si=V-toZQlvGJ9HV7Y5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" data-src="https://www.youtube.com/embed/lyYW0q7U9Pw?si=V-toZQlvGJ9HV7Y5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <br><br>
     <h3>한코 고무단 돗바늘 마무리</h3>
     <p>영문 도안 표시: tubular bind-off<br>
     동영상 강의 ▼</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/waCorEzfCrE?si=tfXSe-CNaOIjnbJS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" data-src="https://www.youtube.com/embed/waCorEzfCrE?si=tfXSe-CNaOIjnbJS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </body>
 </html>
