--- a/knitting/gage.html
+++ b/knitting/gage.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style_sub.css">
+    <link rel="stylesheet" href="knitting/style_sub.css">
   </head>
   <body>
     <h3>게이지란?</h3>
@@ -27,7 +27,7 @@
         <li>겉뜨기 3단을 더 뜨고 코막음하여 마무리한다.</li>
       </ol>
     <p style="margin-bottom: 5px;">완성된 게이지 ▼</p>
-    <img src="../media/gage.jpg" width="450" height="400"><br><br>
+    <img src="media/gage.jpg" width="450" height="400"><br><br>
 
     <p style="font-size: 18px;">※게이지 세탁은 필수, 세탁 전과 세탁 후 가로세로 10cm 안에 몇 코, 몇 단이 들어가는지 확인</p>
   </body>
