--- a/knitting/gart.html
+++ b/knitting/gart.html
@@ -6,14 +6,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style_sub.css">
+    <link rel="stylesheet" href="knitting/style_sub.css">
   </head>
   <body>
     <h3>가터뜨기</h3>
     <p>영문 도안 표시: g-st(garter stiches)<br>
       -겉뜨기단을 반복한다</p><br>
     <p>도안 패턴 ▼</p>
-    <img src="../media/gart.jpg" width="500" height="265"><br><br>
+    <img src="media/gart.jpg" width="500" height="265"><br><br>
     <p>※도안 읽는 방법
     <ul>
       <li>(읽는 방항: 오른쪽 → 왼쪽) 홀수단은 겉뜨기 안뜨기 기호 그대로 뜬다</li>
