--- a/knitting/knit-purl.html
+++ b/knitting/knit-purl.html
@@ -6,15 +6,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style_sub.css">
+    <link rel="stylesheet" href="knitting/style_sub.css">
   </head>
   <body>
     <h3>겉뜨기(knit)</h3>
-    <p>영문 도안 표시: k  도안 기호: <img src="../media/knit.png" width="35px" height="35px"><br>
+    <p>영문 도안 표시: k  도안 기호: <img src="media/knit.png" width="35px" height="35px"><br>
     동영상 강의 ▼</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/_AatRPZcCOo?si=qVUylv_riQDO0gLo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
     <h3>안뜨기(purl)</h3>
-    <p>영문 도안 표시: p  도안 기호: <img src="../media/purl.png" width="35px" height="35px"><br>
+    <p>영문 도안 표시: p  도안 기호: <img src="media/purl.png" width="35px" height="35px"><br>
     동영상 강의 ▼</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/MMrhc_xsk3Q?si=pyTw-xU7nG1iBLsz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </body>
