--- a/knitting/make.html
+++ b/knitting/make.html
@@ -6,17 +6,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style_sub.css">
+    <link rel="stylesheet" href="knitting/style_sub.css">
   </head>
   <body>
     <h3>왼코 늘리기(make 1 left)</h3>
-    <p>영문 도안 표시: M1L  도안 기호: <img src="../media/m1l.png" width="40px" height="40px"><br>
+    <p>영문 도안 표시: M1L  도안 기호: <img src="media/m1l.png" width="40px" height="40px"><br>
     동영상 강의 ▼</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Ap4mwZZd8fo?si=T-oyo9qKwAY8Qo3j" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
     <p>안뜨기 M1L 동영상 강의 ▼</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/XNtmY21oTuc?si=kBbDrAychaGD6ylD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
     <h3>오른코 늘리기(make 1 right)</h3>
-    <p>영문 도안 표시: M1R  도안 기호: <img src="../media/m1r.png" width="40px" height="40px"><br>
+    <p>영문 도안 표시: M1R  도안 기호: <img src="media/m1r.png" width="40px" height="40px"><br>
     동영상 강의 ▼</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/kt8khjzrpak?si=TgF6NLtPBpKYuo96" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
     <h3>겉뜨기 코 늘리기(knit front and back)</h3>
