--- a/knitting/ribbing.html
+++ b/knitting/ribbing.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style_sub.css">
+    <link rel="stylesheet" href="knitting/style_sub.css">
   </head>
   <body>
     <h3>1코 고무뜨기(ribbing)</h3>
@@ -17,7 +17,7 @@
       </ul></p>
       <p style="font-size: 16px;">위 과정을 원하는 길이만큼 반복한다</p><br>
     <p>도안 패턴 ▼</p>
-    <img src="../media/rib.jpg" width="450" height="265"><br><br>
+    <img src="media/rib.jpg" width="450" height="265"><br><br>
     <h3>2코 고무뜨기(ribbing)</h3>
     <p>영문 도안 표시: 2x2 rib<br>
       <ul>
@@ -26,7 +26,7 @@
       </ul></p>
       <p style="font-size: 16px;">위 과정을 원하는 길이만큼 반복한다</p><br>
     <p>도안 패턴 ▼</p>
-    <img src="../media/rib2.png" width="450" height="265"><br><br>
+    <img src="media/rib2.png" width="450" height="265"><br><br>
     <p>※도안 읽는 방법
     <ul>
       <li>(읽는 방항: 오른쪽 → 왼쪽) 홀수단은 겉뜨기 안뜨기 기호 그대로 뜬다</li>
