--- a/knitting/shrink.html
+++ b/knitting/shrink.html
@@ -6,31 +6,31 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style_sub.css">
+    <link rel="stylesheet" href="knitting/style_sub.css">
   </head>
   <body>
     <h3>왼코 2코 모아뜨기(knit 2 stitches together)</h3>
-    <p>영문 도안 표시: k2tog  도안 기호: <img src="../media/k2tog.png" width="40px" height="20px"><br>
+    <p>영문 도안 표시: k2tog  도안 기호: <img src="media/k2tog.png" width="40px" height="20px"><br>
     동영상 강의 ▼</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/o1SMwygZ_jA?si=tSv0OiJEYnvOckH0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
     <h3>왼코 2코 모아 안뜨기(purl 2 stitched together)</h3>
-    <p>영문 도안 표시: p2tog  도안 기호: <img src="../media/p2tog.png" width="40px" height="20px"><br>
+    <p>영문 도안 표시: p2tog  도안 기호: <img src="media/p2tog.png" width="40px" height="20px"><br>
     동영상 강의 ▼</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/iCfLHQsjhZM?si=xYUEwNPTGgfX6Q1X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
     <h3>오른코 모아뜨기(slip slip knit)</h3>
-    <p>영문 도안 표시: skp, skpo, ssk  도안 기호: <img src="../media/ssk.png" width="40px" height="20px"><br>
+    <p>영문 도안 표시: skp, skpo, ssk  도안 기호: <img src="media/ssk.png" width="40px" height="20px"><br>
     동영상 강의 ▼</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/DCh2l-6vxa4?si=37VfdglCIaonJGb9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
     <h3>왼코 3코 모아뜨기(knit 3 stitches together)</h3>
-    <p>영문 도안 표시: k3tog  도안 기호: <img src="../media/k3tog.png" width="30px" height="30px"><br>
+    <p>영문 도안 표시: k3tog  도안 기호: <img src="media/k3tog.png" width="30px" height="30px"><br>
     동영상 강의 ▼</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/OUyhkr0ASFQ?si=iGB1sl57sfJ1bYXl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
     <h3>오른코 3코 모아뜨기(slip slip slip knit)</h3>
-    <p>영문 도안 표시: sssk  도안 기호: <img src="../media/sssk.png" width="30px" height="30px"><br>
+    <p>영문 도안 표시: sssk  도안 기호: <img src="media/sssk.png" width="30px" height="30px"><br>
     동영상 강의 ▼</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Rk2Hl_m2fZc?si=50eTBmbUg46dHmNq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
     <h3>중심 3코 모아뜨기</h3>
-    <p>영문 도안 표시: s2kpo  도안 기호: <img src="../media/s2kpo.png" width="30px" height="30px"><br>
+    <p>영문 도안 표시: s2kpo  도안 기호: <img src="media/s2kpo.png" width="30px" height="30px"><br>
     동영상 강의 ▼</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/pbKMbY1v8Yw?si=OK-AKjM-oopNDGqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </body>
