--- a/knitting/caston.html
+++ b/knitting/caston.html
@@ -13,6 +13,31 @@
     <h3>코 잡기(cast-on)</h3>
     <p>영문 도안 표시: CO<br>
     동영상 강의 ▼</p>
-    <div id="youtube-player" data-video-id="fl73UBCBUpQ?"></div>
+    <div id="youtube-player" data-video-id="fl73UBCBUpQ"></div>
+    <script>
+      // Ensure YouTube API is ready and load the video
+      function onYouTubeIframeAPIReady() {
+        const playerContainer = document.getElementById('youtube-player');
+        const videoId = playerContainer.getAttribute('data-video-id');
+
+        if (videoId) {
+          new YT.Player(playerContainer, {
+            height: '450',
+            width: '800',
+            videoId: videoId,
+            events: {
+              onReady: (event) => {
+                console.log('YouTube Video Loaded:', videoId);
+              },
+              onError: (event) => {
+                console.error('YouTube API Error:', event.data);
+              }
+            }
+          });
+        } else {
+          console.error('No video ID found for YouTube player.');
+        }
+      }
+    </script>
   </body>
 </html>
