--- a/knitting/caston.html
+++ b/knitting/caston.html
@@ -25,6 +25,11 @@
             height: '450',
             width: '800',
             videoId: videoId,
+            playerVars: {
+              origin: 'https://teeliaa.github.io',
+              rel: 0,
+              modestbranding: 1
+            },
             events: {
               onReady: (event) => {
                 console.log('YouTube Video Loaded:', videoId);
