--- a/knitting/stock.html
+++ b/knitting/stock.html
@@ -17,7 +17,7 @@
       </ul></p>
       <p style="font-size: 16px;">위 과정을 원하는 길이만큼 반복한다</p><br>
     <p>도안 패턴 ▼</p>
-    <img src="media/stock_pattern.png" width="400" height="300"><img src="../media/stock.png" width="400" height="300"><br><br>
+    <img src="media/stock_pattern.png" width="400" height="300"><img src="media/stock.png" width="400" height="300"><br><br>
     <p>※도안 읽는 방법
     <ul>
       <li>(읽는 방항: 오른쪽 → 왼쪽) 홀수단은 겉뜨기 안뜨기 기호 그대로 뜬다</li>
