--- a/main.html
+++ b/main.html
@@ -97,6 +97,9 @@
         <iframe name="right-frame" id="right-frame" frameborder="0" style="display: none;"></iframe>
       </article>
     </section>
+    <section class="container iframe-container">
+      <iframe name="full-section-frame" id="full-section-frame"></iframe>
+    </section>
     <footer><br><br></footer>
   </body>
 </html>
